[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program = "1.17.18"
borsh = "0.10.3"
shellexpand = "3.1.0"
my-counter = { path = "../my-counter" , features = ["client"]}





# [package]
# name = "client"
# version = "0.1.0"
# edition = "2021"

# [dependencies]
# solana-client = "1.18.26"
# solana-sdk = "1.18.26"
# solana-program = "1.18.26"
# borsh = "0.10.3"
# shellexpand = "3.1.0"




# [dev-dependencies]
# solana-program-test = "1.17.0"


# my-counter = { path = "../my-counter", features = ["client"] }

