[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.10.3"
dotenv = "0.15"
rand = "0.8"
shellexpand = "3.1.0"

# --- Solana Dependencies ---
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program = "1.18.26"

# --- SPL Token Dependencies ---
spl-token = "3.3.0"
spl-associated-token-account = "1.1.1"

# --- Custom Program ---
my-counter = { path = "../my-counter", features = ["client"] }
