[package]
name = "my-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-program = "1.17.18"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
client = []
custom-heap = []
custom-panic = []






















# old signin and signup
# [package]
# name = "my-counter"
# version = "0.1.0"
# edition = "2021"

# [dependencies]
# borsh = "0.10.3"
# borsh-derive = "0.10.3"
# solana-program = "1.17.18"
# solana-sdk = "1.18.26"
# getrandom = { version = "0.2", features = ["custom"] }


# [lib]
# crate-type = ["cdylib","lib"]

# [features]
# default = []
# client = []
# custom-heap = []
# custom-panic = [] 


