[package]
name = "my-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-program = "1.17.18"
spl-token = { version = "3.5.0", default-features = false, features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }



[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
client = []
custom-heap = []
custom-panic = []


